Trying to fix Main Page alignment
Since I'm not that familiar with html I've been trying to make the main page of the project look like my screen layout I made for it, but I can't figure it out how to align my elements other than my header.  The elements are lined up in the center like how I imagined, but I can't figure out how to make them align like a table. As much as I like flexbox I may have to switch to another form of display.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 #page{
-    margin: auto;
-    width: 90%;
+    margin: 0;
     padding: 50px;
     background-color: #000000;
-    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    border: 10px blue
 
 }
 
@@ -13,16 +14,18 @@ header{
     padding: 10px;
     text-align: center;
     border-radius: 5px;
+    position: relative;
 }
 
-#pageConent{
-    margin: auto;
-    width: 86%;
-    padding: 50px;
-    background-color: #000000;
-    border-radius: 5px;;
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 10px solid blue;
+    height: 70vh;
+    flex-wrap: wrap;
+    flex-direction: row;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
 }
 
 button{
@@ -42,12 +45,14 @@ button:active{
     background-color: rgb(131, 131, 131);
 }
 
-
+/*
 #logo{
     height: 500px;
     width: 500;
 }
+*/
 
 label{
     color: #ffffff;
+    font-size: 25px;
 }
